scroll issue on iOS

--- a/src/containers/SearchPage/SearchPage.css
+++ b/src/containers/SearchPage/SearchPage.css
@@ -108,9 +108,11 @@
   flex-direction: column;
   padding: 0;
   flex: 1 1 auto;
-  overflow: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  @media (--viewportMedium) {
+    overflow: scroll;
+  }
 }
 
 .listings::-webkit-scrollbar {
